--- a/style/main.css
+++ b/style/main.css
@@ -13,12 +13,13 @@ body {
   background-color: #101d28;
 }
 
-.scoreContainer {
-  background-color: rgb(11, 43, 133);
-  padding: 15px 0;
+.topContainer {
+  padding: 25px 0;
+  display: flex;
   display: none;
+  justify-content: space-around;
   margin-bottom: 15px;
-  color: #000;
+  color: #000000;
 }
 
 .paragraph {
@@ -37,4 +38,25 @@ canvas {
   display: none;
   justify-content: center;
   align-items: center;
+}
+
+.scoreContainer {
+  display: flex;
+  justify-content: center;
+  font-family: "Pixelify Sans", sans-serif;
+  align-items: center;
+  background-color: #2e6290a3;
+  width: 150px;
+  height: 50px;
+  border-radius: 20px;
+  margin: 0 50px;
+  color: #ffffff;
+}
+
+.lifeCount {
+  width: 70px;
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  color: red;
 }
