Added 3 lives for the player, additional sound during gameplay, and changed the interface of the dialog window.

--- a/style/messages.css
+++ b/style/messages.css
@@ -33,6 +33,12 @@
   font-family: "Pixelify Sans", sans-serif;
 }
 
+.gameMessage__btns {
+  display: flex;
+  justify-content:space-between
+  
+}
+
 .gameMessage__nextLvBtn {
   display: block;
   font-family: "Pixelify Sans", sans-serif;
